fix padding/margin mixup on chart column, reduce font-size on mobile

--- a/src/app/components/Pages/Player/stats/statstab.scss
+++ b/src/app/components/Pages/Player/stats/statstab.scss
@@ -58,10 +58,14 @@
     }
 }
 .playermodule {
-    padding: 2.5rem 2.5rem;
+    padding: 2rem;
     margin-bottom: 2rem;
     background-color: lighten($bg-color, 3%);
     border-radius: $borderradius;
+
+    @include medium {
+        padding: 2.5rem;
+    }
 
     &__header {
         display: flex;
@@ -75,7 +79,7 @@
             }
             justify-content: flex-end;
             margin: 0;
-            font-size: $font-smaller;
+            font-size: $font-small;
 
             @include medium {
                 font-size: $font-default;
@@ -85,12 +89,16 @@
         }
     }
     &__title {
-        font-size: $font-large;
+        font-size: $font-bigger;
         font-weight: 500;
         font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
             sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
         letter-spacing: 0.1rem;
         flex: 1;
+
+        @include medium {
+            font-size: $font-large;
+        }
     }
     &__subtitle {
         color: $font-color-subtle;
@@ -114,47 +122,6 @@
             justify-content: flex-start;
         }
 
-        &:focus {
-            outline: none;
-        }
-
-        .icon {
-            width: 2rem;
-            height: 2rem;
-            margin-top: 2px;
-            margin-right: 1rem;
-        }
-    }
-    &__title {
-        font-size: $font-large;
-        font-weight: 500;
-        font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
-            sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        letter-spacing: 0.1rem;
-        flex: 1;
-    }
-    &__subtitle {
-        color: $font-color-subtle;
-    }
-    &__divider {
-        margin: 2rem 0;
-        width: 100%;
-        height: 1px;
-        background: rgba(255, 255, 255, 0.05s);
-    }
-    &__expand {
-        display: flex;
-        color: $font-color-subtle;
-        width: 100%;
-        align-items: center;
-        cursor: pointer;
-        margin-top: 1rem;
-        justify-content: center;
-
-        @include medium {
-            justify-content: flex-start;
-        }
-        
         &:focus {
             outline: none;
         }
